kubernetes/deployment-board.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board
  namespace: board
  labels:
    app: board
spec:
  replicas: 2
  selector:
    matchLabels:
      app: board
  template:
    metadata:
      labels:
        app: board
    spec:
      containers:
        - name: board
          image: aramidhwan/board:latest
          ports:
            - containerPort: 8090
