kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: board
  namespace: board
  labels:
    app: board
spec:
  ports:
    - port: 8090
      targetPort: 8090
  selector:
    app: board
  type: ClusterIP
