kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-ingress
spec:
  ingressClassName: nginx	# 인그레스 컨트롤러 리소스의 이름으로 어떤 컨트롤러를 구현할 것인지 정의한다.
  rules:
    #- host: foo.bar.com 	# host를 지정할 수 있다. 만약 host를 지정하지 않는다면 ip로 연결된다.
    - http:
        paths:
          - path: /board	# 각 path는 아래 .spec.rules.http.paths.backend로 연결된다.
            pathType: Prefix
            backend:
              service:
                name: board
                port:
                  number: 8090
